Update HTML for versioning and content adjustments
Signed-off-by: Chitrasen Sahu <chitra_1657@aaft.edu.in>

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CHITRASEN - The Artist's World</title>
-    <!-- v5.0 for the new Fullscreen Floating Gallery -->
-    <link rel="stylesheet" href="styles.css?v=5.0">
+    <!-- v5.1 to ensure the browser loads the latest files -->
+    <link rel="stylesheet" href="styles.css?v=5.1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Cinzel+Decorative:wght@700&family=Rajdhani:wght@300;500&display=swap" rel="stylesheet">
@@ -24,9 +24,8 @@
     </header>
 
     <main>
-        <!-- Section 1: Welcome Screen - NOW A FULLSCREEN GALLERY -->
+        <!-- Section 1: Welcome Screen - Fullscreen Floating Gallery -->
         <section id="home" class="welcome-section">
-            <!-- All 6 images are now floating -->
             <div class="floating-images">
                 <img src="20250921_113156.jpg" alt="Floating Artwork 1" class="float-img-1">
                 <img src="20250921_113623.jpg" alt="Floating Artwork 2" class="float-img-2">
@@ -36,9 +35,6 @@
                 <img src="IMG-20241107-WA0028(1).jpg" alt="Floating Artwork 6" class="float-img-6">
             </div>
             
-            <!-- Welcome text is removed, but this div remains for structure -->
-            <div class="welcome-content"></div>
-
             <div class="scroll-indicator">
                 <span>SCROLL DOWN</span>
                 <div class="indicator-arrow">↓</div>
@@ -49,30 +45,12 @@
         <section id="portfolio" class="content-section">
             <h2 class="section-title">PORTFOLIO</h2>
             <div class="portfolio-grid">
-                <div class="portfolio-item">
-                    <img src="20250921_113156.jpg" alt="Artwork 1">
-                    <div class="overlay"></div>
-                </div>
-                <div class="portfolio-item">
-                    <img src="20250921_113623.jpg" alt="Artwork 2">
-                    <div class="overlay"></div>
-                </div>
-                <div class="portfolio-item">
-                    <img src="20250921_113749.jpg" alt="Artwork 3">
-                    <div class="overlay"></div>
-                </div>
-                <div class="portfolio-item">
-                    <img src="20250921_113830.jpg" alt="Artwork 4">
-                    <div class="overlay"></div>
-                </div>
-                <div class="portfolio-item">
-                    <img src="20250921_114202.jpg" alt="Artwork 5">
-                    <div class="overlay"></div>
-                </div>
-                <div class="portfolio-item">
-                    <img src="IMG-20241107-WA0028(1).jpg" alt="Artwork 6">
-                    <div class="overlay"></div>
-                </div>
+                <div class="portfolio-item"><img src="20250921_113156.jpg" alt="Artwork 1"><div class="overlay"></div></div>
+                <div class="portfolio-item"><img src="20250921_113623.jpg" alt="Artwork 2"><div class="overlay"></div></div>
+                <div class="portfolio-item"><img src="20250921_113749.jpg" alt="Artwork 3"><div class="overlay"></div></div>
+                <div class="portfolio-item"><img src="20250921_113830.jpg" alt="Artwork 4"><div class="overlay"></div></div>
+                <div class="portfolio-item"><img src="20250921_114202.jpg" alt="Artwork 5"><div class="overlay"></div></div>
+                <div class="portfolio-item"><img src="IMG-20241107-WA0028(1).jpg" alt="Artwork 6"><div class="overlay"></div></div>
             </div>
         </section>
 
@@ -103,6 +81,6 @@
         </section>
     </main>
 
-    <script src="script.js?v=5.0"></script>
+    <script src="script.js?v=5.1"></script>
 </body>
 </html>
